Fix dark mode for product highlights

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1139,6 +1139,10 @@ a.icon__linkedin:active {
     color: var(--dark-text-500);
   }
 
+  .section__clients {
+    border-top: 0.5px solid rgba(var(--color-coolgrey-500-rgb), 0.3);
+  }
+  
   .section__list {
     background-color: var(--color-coolgrey-900);
   }
@@ -1147,8 +1151,16 @@ a.icon__linkedin:active {
     background-color: var(--dark-background-base);
   }
 
-  .section__clients {
-    border-top: 0.5px solid rgba(var(--color-coolgrey-500-rgb), 0.3);
+  .list--secondary  {
+    border-left: 4px solid var(--color-coolgrey-800);
+  }
+
+  .section__list--highlight .list--secondary {
+    background-image: linear-gradient(165deg, rgba(var(--color-coolgrey-500-rgb), 0.15), rgba(var(--color-coolgrey-300-rgb), 0));
+  }
+
+  .list__border-left {
+    border-left: 4px solid var(--color-coolgrey-800);
   }
 
   .logo-tile {
@@ -1191,14 +1203,6 @@ a.icon__linkedin:active {
 
   .logo-svg__foreground {
     fill: hsl(0 0% 0%);
-  }
-
-  .list--secondary  {
-    border-left: 4px solid var(--color-coolgrey-800);
-  }
-
-  .list__border-left {
-    border-left: 4px solid var(--color-coolgrey-800);
   }
 
   .footer {
